<resources>
    <string name="app_name">ViewModelAutomation</string>
    <string name="welcome_to_viewmodelautomation">Welcome to ViewModelAutomation!</string>
    <string name="login">Login</string>
    <string name="get_images">Get a list of pictures</string>
    <string name="get_video_list">Get video list</string>
    <string name="register">register</string>
    <string name="get_verification">get verification code</string>
    <string name="please_enter_email">please input your email</string>
    <string name="please_enter_verification">please enter verification code</string>
    <string name="sign_in">Sign in</string>
    <string name="result">Result</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="sign_up">Sign up</string>
    <string name="other">Other</string>
    <string name="download_file">download file</string>
    <string name="upload_file">upload file</string>
</resources>